Add responsive hover stylings

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <body>
     <header class="flex between dark-grey center sml-pad">
       <ul class="flex end text-grey">
-        <li class="text-white"><i class="fas fa-share-alt"></i>SHARES</li>
-        <li><i class="fas fa-list-ul text-blue"></i>PLAYLISTS</li>
-        <li><i class="far fa-user text-blue"></i>PERSONAL VIDEOS</li>
+        <li class="text-white"><i class="fas fa-share-alt heartbeat"></i><span class="blink">SHARES</span></li>
+        <li><i class="fas fa-list-ul text-blue heartbeat"></i><span class="blink">PLAYLISTS</span></li>
+        <li><i class="far fa-user text-blue heartbeat"></i><span class="blink">PERSONAL VIDEOS</span></li>
       </ul>
       <div class="user flex column between">
-        <p class="log-in text-blue"><i class="far fa-user text-white"></i>Admin Username<i class="fas fa-caret-down"></i></p>
-        <img class="title-img" src="./assets/2-win-logo.png" alt="company logo"/>
+        <p class="log-in text-blue sml-top-marg"><i class="far fa-user text-white heartbeat"></i><span>Admin Username</span><i class="fas fa-caret-down heartbeat"></i></p>
+        <img class="title-img sml-lft-marg " src="./assets/2-win-logo.png" alt="company logo"/>
       </div>
     </header>
     <main class="flex column start egg-grey sml-lft-pad">
