--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><i class="far fa-user text-blue heartbeat"></i><span class="blink">PERSONAL VIDEOS</span></li>
       </ul>
       <div class="user flex column between">
-        <p class="log-in text-blue sml-top-marg"><i class="far fa-user text-white heartbeat"></i><span>Admin Username</span><i class="fas fa-caret-down heartbeat"></i></p>
+        <p class="log-in text-blue sml-top-marg"><i class="far fa-user text-white heartbeat"></i><span class="blink">Admin Username</span><i class="fas fa-caret-down heartbeat"></i></p>
         <img class="title-img sml-lft-marg " src="./assets/2-win-logo.png" alt="company logo"/>
       </div>
     </header>
@@ -39,7 +39,7 @@
             <p class ="date">Monday 01/23/16 10:22am</p>
             <div class="address egg-grey sml-top-marg sml-btm-marg"><p class="url">http://2win.2winstage.com/p/tony_stark</p></div>
             <p class="playlist">PLAYLIST</p>
-            <p class="playlist-name">Name of Playlist</p>
+            <p class="playlist-name">Stark Workshop Beats</p>
             <p class="attachments sml-top-marg">ATTACHMENTS</p>
             <p class="numbers text-blue">04</p>
           </section>
@@ -61,7 +61,7 @@
             <div class="address egg-grey sml-top-marg sml-btm-marg"><p class="url">http://2win.2winstage.com/p/steve_rogers</p></div>
             <p class="playlist">PLAYLIST</p>
             <p class="playlist-name">Name of Playlist</p>
-            <p class="attachments sml-top-marg">ATTACHMENTS</p>
+            <p class="attachments sml-top-marg">Star Spangled Songs</p>
             <p class="numbers text-blue">04</p>
           </section>
         </article>
@@ -81,7 +81,7 @@
             <p class ="date">Monday 01/23/16 10:22am</p>
             <div class="address egg-grey sml-top-marg sml-btm-marg"><p class="url">http://2win.2winstage.com/p/thor_odinson</p></div>
             <p class="playlist">PLAYLIST</p>
-            <p class="playlist-name">Name of Playlist</p>
+            <p class="playlist-name">Rockin' Ragna-rock</p>
             <p class="attachments sml-top-marg">ATTACHMENTS</p>
             <p class="numbers text-blue">04</p>
           </section>
@@ -102,7 +102,7 @@
             <p class ="date">Monday 01/23/16 10:22am</p>
             <div class="address egg-grey sml-top-marg sml-btm-marg"><p class="url">http://2win.2winstage.com/p/natasha_romanoff</p></div>
             <p class="playlist">PLAYLIST</p>
-            <p class="playlist-name">Name of Playlist</p>
+            <p class="playlist-name">Badass Boss Babes</p>
             <p class="attachments sml-top-marg">ATTACHMENTS</p>
             <p class="numbers text-blue">04</p>
           </section>
@@ -123,7 +123,7 @@
             <p class ="date">Monday 01/23/16 10:22am</p>
             <div class="address egg-grey sml-top-marg sml-btm-marg"><p class="url">http://2win.2winstage.com/p/clint_barton/p></div>
             <p class="playlist">PLAYLIST</p>
-            <p class="playlist-name">Name of Playlist</p>
+            <p class="playlist-name">Wild, Wild West</p>
             <p class="attachments sml-top-marg">ATTACHMENTS</p>
             <p class="numbers text-blue">04</p>
           </section>
@@ -144,7 +144,7 @@
             <p class ="date">Monday 01/23/16 10:22am</p>
             <div class="address egg-grey sml-top-marg sml-btm-marg"><p class="url">http://2win.2winstage.com/p/bruce_banner</p></div>
             <p class="playlist">PLAYLIST</p>
-            <p class="playlist-name">Name of Playlist</p>
+            <p class="playlist-name">Sleepy Sonnets</p>
             <p class="attachments sml-top-marg">ATTACHMENTS</p>
             <p class="numbers text-blue">04</p>
           </section>
@@ -165,7 +165,7 @@
             <p class ="date">Monday 01/23/16 10:22am</p>
             <div class="address egg-grey sml-top-marg sml-btm-marg"><p class="url">http://2win.2winstage.com/p/wanda_maximoff</p></div>
             <p class="playlist">PLAYLIST</p>
-            <p class="playlist-name">Name of Playlist</p>
+            <p class="playlist-name">90's Kid</p>
             <p class="attachments sml-top-marg">ATTACHMENTS</p>
             <p class="numbers text-blue">04</p>
           </section>
@@ -186,7 +186,7 @@
             <p class ="date">Monday 01/23/16 10:22am</p>
             <div class="address egg-grey sml-top-marg sml-btm-marg"><p class="url">http://2win.2winstage.com/p/stephen_strange_md</p></div>
             <p class="playlist">PLAYLIST</p>
-            <p class="playlist-name">Name of Playlist</p>
+            <p class="playlist-name">Jazz Hands</p>
             <p class="attachments sml-top-marg">ATTACHMENTS</p>
             <p class="numbers text-blue">04</p>
           </section>
